--- a/AnimacaoFoguete/index.html
+++ b/AnimacaoFoguete/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"></link>
     <script src="script.js"></script>
-    <title>Brincando</title>
+    <title>Foguete</title>
 </head>
 <body>
 
